# OpenGL_core_project

./: .gitignore  CMakeLists.txt  README.md
includes/learnopengl/: camera.h  shader.h
resources/objects/elevator/: base.mtl  well.mtl  wheel.mtl
resources/objects/fence/: fence.mtl
resources/objects/floor1/: house.mtl  house_base.mtl
resources/objects/floor2/: scene.mtl
resources/objects/grass/: Grass-small.mtl  tree.mtl
shaders/: advanced_lighting.frag  blending_discard.frag  blending_discard.vs  bloom.frag  bloom.vs  bloom_final.frag  blur.frag  cube.frag  cube.vs  depth_testing.frag  fire.frag  fire.vs  flame.frag  flame.vs  light_box.frag  model_shader.frag  model_shader.vs  shadow_mapping.frag
src/1.getting_started/1.hello_window/: hellowindow2.cpp
src/1.getting_started/2.hello_triangle/: hellotriangle2.cpp
src/1.getting_started/3.shaders/: shaders-using-object.cpp
src/1.getting_started/4.textures/: textures_combined.cpp
src/1.getting_started/5.transformations/: transformations.cpp
src/1.getting_started/6.coordinate_systems/: coordinate_systems_multiple_objects.cpp
src/1.getting_started/7.camera/: camera_with_class.cpp
src/2.lighting/1.colors/: colors_scene.cpp
src/2.lighting/2.basic_lighting/: basic_lighting_specular.cpp
src/2.lighting/3.materials/: materials.cpp
src/2.lighting/4.lighting_maps/: lighting_maps_specular.cpp
src/2.lighting/5.light_casters/: light_casters_spotlight_soft.cpp
src/2.lighting/6.multiple_lights/: multiple_lights.cpp
src/3.model_loading/1.model_loading/: model_rendered.cpp
src/4.advanced_opengl/10.instancing/: instancing_asteroids_instanced.cpp
src/4.advanced_opengl/11.anti_aliasing/: anti_aliasing_framebuffers.cpp
src/4.advanced_opengl/2.stencil_testing/: stencil_testing.cpp
src/4.advanced_opengl/3.1.blending_discard/: blending_discard.cpp
src/4.advanced_opengl/3.2.blending_sort/: blending_sorted.cpp
src/4.advanced_opengl/5.framebuffers/: framebuffers_screen_texture.cpp
src/4.advanced_opengl/6.cubemaps/: cubemaps_skybox_optimized.cpp
src/4.advanced_opengl/8.advanced_glsl/: advanced_glsl_uniform_buffer_objects.cpp
src/4.advanced_opengl/9.geometry_shader/: geometry_shader_houses.cpp
src/5.advanced_lighting/1.advanced_lighting/: advanced_lighting.cpp
src/5.advanced_lighting/2.gamma_correction/: gamma_correction.cpp
src/5.advanced_lighting/3.1.shadow_mapping/: ParticleGenerator.cpp  ParticleGenerator.h  shadow_mapping.cpp
src/5.advanced_lighting/3.2.point_shadows/: point_shadows.cpp
src/5.advanced_lighting/3.3.csm/: csm.cpp
src/5.advanced_lighting/7.bloom/: bloom.cpp
